sumo/tests/dfrouter/errors/false_space3/options.dfrouter
--net-file copy of net.net.xml --detector-files input_detectors.det.xml --detectors-poi-output detectors.poi.xml
